--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,13 @@ version = "0.0.1"
 
 [dependencies]
 indoc = "2"
-enum-map = "3.0.0-0.gat.0"
+enum-map = "2.7"
 strum = "0.25"
 strum_macros = "0.25"
+rand = "0.8"
+clearscreen = "2.0"
+anyhow = "1.0"
 
 [dev-dependencies]
-test-case = "3.1.0"
+test-case = "3.1"
 pretty_assertions = "1"
